--- a/descuentos.html
+++ b/descuentos.html
@@ -7,9 +7,37 @@
     <title>Porcentajes y descuentos | Curso Práctico de Javascript</title>
 </head>
 <body>
-    <h1>
-        Porcentajes y descuentos 
-    </h1>
+    <header>
+        <h1>
+            Porcentajes y descuentos 
+        </h1>
+        <p>
+            Este es el segundo taller del Curso Práctico de Javascript 
+        </p>
+    </header>
+
+    <section>
+        <h2>
+            Calcula el precio a pagar de tus productos con descuento
+        </h2>
+        <form>
+            <label for="inputPrice">
+                Escribe el precio de tu producto:
+            </label>
+            <input id="inputPrice" type="number">
+
+            <label for="inputDiscount">
+                Escribe el descuento de tu producto:
+            </label>
+            <input id="inputDiscount" type="number">
+
+            <button type="button" onclick="onClickButonPriceDiscount()">
+                Calcular el precio con descuento
+            </button>
+
+            <p id="resultPrice"></p>
+        </form>
+    </section>
     <script src="./descuentos.js"></script>
 </body>
 </html>
